# autonomous-driving-vehicle-ROS2

./: .gitignore  .gitmodules  README.md  build.bash  source_ws.bash  startup.bash  test.bash
.github/workflows/: CI.yml
interface/: requirements.txt  test.py  web.py
interface/templates/: result.html  transform.html  upload.html
interface/uploads/: topo_gros_cacouna_1.csv
src/control/: package.xml  setup.py
src/control/control/: intersection_turning_node.py  motor_driver_node.py  null_command_sending_node.py  wall_following_node.py
src/control/tests/: test_motor_driver.py  test_null_command_node.py  test_wall_following_node.py
src/design3_msgs/: CMakeLists.txt  package.xml
src/design3_msgs/msg/: ArucoMarker.msg  DropPointInfo.msg  DropPointInfos.msg  Edge.msg  Localization.msg  MapInfo.msg  Objective.msg  (+3 more)
src/design3_system/: CMakeLists.txt  package.xml
src/design3_system/config/: aruco_detection.yaml  camera.yaml  lidar.yaml  teleop.yaml  twist_mux.yaml
src/design3_system/launch/: camera.launch.py  control.launch.py  description.launch.py  lidar.launch.py  optical_sensor.launch.py  perception.launch.py  planning.launch.py  system.launch.py  teleop.launch.py  test.launch.py
src/design3_system/urdf/: rover_description.urdf
src/motor_driver/: package.xml  setup.py
src/optical_sensor/: data.json  gpio-test.py  optical_sensor.py  package.xml  publisher_node.py  setup.cfg  setup.py  subscriber_node.py
src/perception/: package.xml  setup.cfg  setup.py
src/planning/: package.xml  setup.py
src/wall_following/: package.xml  setup.cfg  setup.py
(+16 files in other folders)
